--- a/src/index.html
+++ b/src/index.html
@@ -213,13 +213,19 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="/uploads.html">
+                  <a
+                    class="nav-link d-flex align-items-center gap-2"
+                    href="/uploads.html"
+                  >
                     <svg class="bi"><use xlink:href="#file-earmark" /></svg>
                     Upload
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="/results.html">
+                  <a
+                    class="nav-link d-flex align-items-center gap-2"
+                    href="/results.html"
+                  >
                     <svg class="bi"><use xlink:href="#graph-up" /></svg>
                     Search results
                   </a>
@@ -230,7 +236,7 @@
 
               <ul class="nav flex-column mb-auto">
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  <a class="nav-link d-flex align-items-center gap-2" id="sign-out-btn" type="button">
                     <svg class="bi"><use xlink:href="#door-closed" /></svg>
                     Sign out
                   </a>
@@ -246,22 +252,24 @@
           </div>
 
           <div id="upload-section" class="mb-5">
-            <div
-              class="pb-2"
-            >
+            <div class="pb-2">
               <h2>Uploads</h2>
             </div>
             <div id="uploadForm" class="mb-3">
               <label for="formFile" class="form-label"
-                  >Select file to upload &lpar;Only support CSV
-                  extension&rpar;</label
+                >Select file to upload &lpar;Only support CSV
+                extension&rpar;</label
               >
               <div class="d-flex">
                 <div>
                   <input class="form-control" type="file" id="formFile" />
                 </div>
                 <div class="ms-5">
-                  <button id="upload-button" type="button" class="btn btn-primary">
+                  <button
+                    id="upload-button"
+                    type="button"
+                    class="btn btn-primary"
+                  >
                     Upload file
                   </button>
                 </div>
@@ -269,145 +277,15 @@
             </div>
           </div>
 
-          <div id="search-result-section">
-            <h2>Search results</h2>
-            <div class="table-responsive small">
-              <table class="table table-striped table-sm">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Header</th>
-                    <th scope="col">Header</th>
-                    <th scope="col">Header</th>
-                    <th scope="col">Header</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>1,001</td>
-                    <td>random</td>
-                    <td>data</td>
-                    <td>placeholder</td>
-                    <td>text</td>
-                  </tr>
-                  <tr>
-                    <td>1,002</td>
-                    <td>placeholder</td>
-                    <td>irrelevant</td>
-                    <td>visual</td>
-                    <td>layout</td>
-                  </tr>
-                  <tr>
-                    <td>1,003</td>
-                    <td>data</td>
-                    <td>rich</td>
-                    <td>dashboard</td>
-                    <td>tabular</td>
-                  </tr>
-                  <tr>
-                    <td>1,003</td>
-                    <td>information</td>
-                    <td>placeholder</td>
-                    <td>illustrative</td>
-                    <td>data</td>
-                  </tr>
-                  <tr>
-                    <td>1,004</td>
-                    <td>text</td>
-                    <td>random</td>
-                    <td>layout</td>
-                    <td>dashboard</td>
-                  </tr>
-                  <tr>
-                    <td>1,005</td>
-                    <td>dashboard</td>
-                    <td>irrelevant</td>
-                    <td>text</td>
-                    <td>placeholder</td>
-                  </tr>
-                  <tr>
-                    <td>1,006</td>
-                    <td>dashboard</td>
-                    <td>illustrative</td>
-                    <td>rich</td>
-                    <td>data</td>
-                  </tr>
-                  <tr>
-                    <td>1,007</td>
-                    <td>placeholder</td>
-                    <td>tabular</td>
-                    <td>information</td>
-                    <td>irrelevant</td>
-                  </tr>
-                  <tr>
-                    <td>1,008</td>
-                    <td>random</td>
-                    <td>data</td>
-                    <td>placeholder</td>
-                    <td>text</td>
-                  </tr>
-                  <tr>
-                    <td>1,009</td>
-                    <td>placeholder</td>
-                    <td>irrelevant</td>
-                    <td>visual</td>
-                    <td>layout</td>
-                  </tr>
-                  <tr>
-                    <td>1,010</td>
-                    <td>data</td>
-                    <td>rich</td>
-                    <td>dashboard</td>
-                    <td>tabular</td>
-                  </tr>
-                  <tr>
-                    <td>1,011</td>
-                    <td>information</td>
-                    <td>placeholder</td>
-                    <td>illustrative</td>
-                    <td>data</td>
-                  </tr>
-                  <tr>
-                    <td>1,012</td>
-                    <td>text</td>
-                    <td>placeholder</td>
-                    <td>layout</td>
-                    <td>dashboard</td>
-                  </tr>
-                  <tr>
-                    <td>1,013</td>
-                    <td>dashboard</td>
-                    <td>irrelevant</td>
-                    <td>text</td>
-                    <td>visual</td>
-                  </tr>
-                  <tr>
-                    <td>1,014</td>
-                    <td>dashboard</td>
-                    <td>illustrative</td>
-                    <td>rich</td>
-                    <td>data</td>
-                  </tr>
-                  <tr>
-                    <td>1,015</td>
-                    <td>random</td>
-                    <td>tabular</td>
-                    <td>information</td>
-                    <td>text</td>
-                  </tr>
-                </tbody>
-              </table>
+          <div id="search-result-section" class="mb-5">
+            <div class="pb-2">
+              <h2>Search results</h2>
             </div>
           </div>
         </main>
       </div>
     </div>
-    <script type="module" src="services/main.js"></script>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/chart.js@4.3.2/dist/chart.umd.js"
-      integrity="sha384-eI7PSr3L1XLISH8JdDII5YN/njoSsxfbrkCTnJrzXt+ENP5MOVBxD+l6sEG4zoLp"
-      crossorigin="anonymous"
-    ></script>
+    <script type="module" src="services/main.js"></script>
   </body>
 </html>
