--- a/src/results.html
+++ b/src/results.html
@@ -230,7 +230,7 @@
 
               <ul class="nav flex-column mb-auto">
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  <a class="nav-link d-flex align-items-center gap-2" id="sign-out-btn" type="button">
                     <svg class="bi"><use xlink:href="#door-closed" /></svg>
                     Sign out
                   </a>
